Added racenet urls

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-server.tomcat.access_log_enabled: true
-server.tomcat.basedir: target/tomcat
+# Web server
 server.port=8080
 
-# LOGGING
+# Logging
 logging.file=/tmp/logs/pharlap.log
 logging.level.*=INFO
+
+# External URLs
+url.base=https://www.racenet.com.au
+url.form=${url.base}/form/formguide.aspx?trackcode={0}&shortdate={1}&raceno={2}
+url.horse=${url.base}/horse/{0}
+url.race=${url.base}/horse-racing-results/{0}/{1}
+url.jockey=${url.base}/jockey/{0}
