--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<wro4j.version>1.8.0</wro4j.version>
 		<angularjs.version>1.4.9</angularjs.version>
 		<bootstrap.version>3.3.7-1</bootstrap.version>
+		<bootstrap.datepicker.version>1.6.4</bootstrap.datepicker.version>
 		<jquery.version>2.2.4</jquery.version>
 		<jasmine.version>2.0.0</jasmine.version>
 	</properties>
@@ -148,6 +149,11 @@
 						<groupId>org.webjars</groupId>
 						<artifactId>bootstrap</artifactId>
 						<version>${bootstrap.version}</version>
+					</dependency>
+					<dependency>
+					    <groupId>org.webjars</groupId>
+					    <artifactId>bootstrap-datepicker</artifactId>
+					    <version>${bootstrap.datepicker.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
